# Bank-Marketing

./: Dockerfile  README.md  api_main.py  app.py  main.py  pyproject.toml  requirements.txt
bankmarketing/: bank_marketing.pbix
config/: threshold.json
models/: xgb_pipeline.pkl
src/: data_loader.py  evaluate.py  preprocess.py  train.py
