[project]
name = "bank-marketing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "imbalanced-learn>=0.13.0",
    "joblib>=1.5.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.6.1",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.2",
]
